tests/sksl/errors/golden/Ossfuzz26759.glsl
### Compilation failed:

../../src/sksl/ir/SkSLExpression.h:95: fatal error: "assert(this->is<T>())"
